--- a/gui/css/style.css
+++ b/gui/css/style.css
@@ -1,7 +1,11 @@
 body{
     background-color: #0A0906;
+    color: #ffffff;
 }
 
 div{
-    background-color: #706E6B;
+    background-color: #CBCBCB;
+    margin: auto;
+    width: 40%;
+    padding: 20px;
 }
